# ceremony

./: .dockerignore  Cargo.toml  Dockerfile  README.md  download.sh  prime
.github/ISSUE_TEMPLATE/: 0_contribution.md  1_bug.md
.github/workflows/: close.yml  instructions.yml  random_beacon.yml
docs/: build.md  ceremony.md
src/execs/: check.rs  contribute.rs  finalize.rs  start.rs
src/lib/: check.rs  contribute.rs  contribution.rs  finalize.rs  mod.rs  ppot.rs  proof.rs  secrets.rs  utils.rs
